Bug 80012 - [softpipe] draw/draw_gs.c:113:tgsi_fetch_gs_outputs: Assertion `!util_is_inf_or_nan(output[slot][0])' failed.
Summary: [softpipe] draw/draw_gs.c:113:tgsi_fetch_gs_outputs: Assertion `!util_is_inf_...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: have-backtrace
Depends on:
Blocks:
 
Reported: 2014-06-14 01:31 UTC by Vinson Lee
Modified: 2014-08-29 23:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-06-14 01:31:37 UTC
mesa: ffe609cc69f328de5b57d4d7ab1d270fcf28de5f (master)

Run piglit texelFetch gs isampler1D test.

$ ./bin/texelFetch gs isampler1D -auto
65x1x1
draw/draw_gs.c:113:tgsi_fetch_gs_outputs: Assertion `!util_is_inf_or_nan(output[slot][0])' failed.

(gdb) bt
#0  0x00007f4e03a26e87 in _debug_assert_fail (expr=0x7f4e03b21440 "!util_is_inf_or_nan(output[slot][0])", file=0x7f4e03b2142c "draw/draw_gs.c", line=113, 
    function=0x7f4e03b21620 <__func__.6832> "tgsi_fetch_gs_outputs") at util/u_debug.c:309
#1  0x00007f4e039c1596 in tgsi_fetch_gs_outputs (shader=0x208e7d0, num_primitives=1, p_output=0x208f030) at draw/draw_gs.c:113
#2  0x00007f4e039c1b34 in gs_flush (shader=0x208e7d0) at draw/draw_gs.c:410
#3  0x00007f4e039c1bc9 in gs_point (shader=0x208e7d0, idx=1) at draw/draw_gs.c:435
#4  0x00007f4e039c1f4b in gs_run (gs=0x208e7d0, input_prims=0x7fffde9e0380, input_verts=0x7fffde9e0250, output_prims=0x7fffde9e02b0, output_verts=0x7fffde9e0270) at draw/draw_decompose_tmp.h:66
#5  0x00007f4e039c3afb in draw_geometry_shader_run (shader=0x208e7d0, constants=0x1bd3568, constants_size=0x1bd3668, input_verts=0x7fffde9e0250, input_prim=0x7fffde9e0380, input_info=0x208f1b8, 
    output_verts=0x7fffde9e0270, output_prims=0x7fffde9e02b0) at draw/draw_gs.c:629
#6  0x00007f4e039db564 in fetch_pipeline_generic (middle=0x1c02900, fetch_info=0x0, in_prim_info=0x7fffde9e0380) at draw/draw_pt_fetch_shade_pipeline.c:290
#7  0x00007f4e039db8af in fetch_pipeline_linear_run (middle=0x1c02900, start=0, count=65, prim_flags=0) at draw/draw_pt_fetch_shade_pipeline.c:416
#8  0x00007f4e039e4023 in vsplit_segment_simple_linear (vsplit=0x1be11e0, flags=0, istart=0, icount=65) at draw/draw_pt_vsplit_tmp.h:240
#9  0x00007f4e039e431a in vsplit_run_linear (frontend=0x1be11e0, start=0, count=65) at draw/draw_split_tmp.h:60
#10 0x00007f4e039d6c3d in draw_pt_arrays (draw=0x1bd2bd0, prim=0, start=0, count=65) at draw/draw_pt.c:149
#11 0x00007f4e039d7a68 in draw_vbo (draw=0x1bd2bd0, info=0x7fffde9e04e0) at draw/draw_pt.c:564
#12 0x00007f4e03684555 in softpipe_draw_vbo (pipe=0x1be49f0, info=0x7fffde9e0630) at sp_draw_arrays.c:131
#13 0x00007f4e039be287 in cso_draw_vbo (cso=0x1cec810, info=0x7fffde9e0630) at cso_cache/cso_context.c:1428
#14 0x00007f4e038970b8 in st_draw_vbo (ctx=0x7f4e09341010, prims=0x7fffde9e0700, nr_prims=1, ib=0x0, index_bounds_valid=1 '\001', min_index=0, max_index=64, tfb_vertcount=0x0, indirect=0x0)
    at state_tracker/st_draw.c:276
#15 0x00007f4e0384fa48 in vbo_draw_arrays (ctx=0x7f4e09341010, mode=0, start=0, count=65, numInstances=1, baseInstance=0) at vbo/vbo_exec_array.c:667
#16 0x00007f4e03850493 in vbo_exec_DrawArrays (mode=0, start=0, count=65) at vbo/vbo_exec_array.c:819
#17 0x00007f4e08e63518 in stub_glDrawArrays (mode=0, first=0, count=65) at piglit/tests/util/generated_dispatch.c:6274
#18 0x0000000000402d61 in test_once () at piglit/tests/texturing/shaders/texelFetch.c:167
#19 0x0000000000404bb0 in piglit_display () at piglit/tests/texturing/shaders/texelFetch.c:931
#20 0x00007f4e08e54c02 in display () at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:60
#21 0x00007f4e082e6244 in fghRedrawWindow (window=0x1bcdba0) at freeglut_main.c:231
#22 fghcbDisplayWindow (window=0x1bcdba0, enumerator=0x7fffde9e08e0) at freeglut_main.c:248
#23 0x00007f4e082e9aa9 in fgEnumWindows (enumCallback=enumCallback@entry=0x7f4e082e61d0 <fghcbDisplayWindow>, enumerator=enumerator@entry=0x7fffde9e08e0) at freeglut_structure.c:396
#24 0x00007f4e082e67fd in fghDisplayAll () at freeglut_main.c:271
#25 glutMainLoopEvent () at freeglut_main.c:1523
#26 0x00007f4e082e6ffd in glutMainLoop () at freeglut_main.c:1571
#27 0x00007f4e08e54f3e in run_test (gl_fw=0x7f4e091453c0 <glut_fw>, argc=3, argv=0x7fffde9e0cb8) at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:167
#28 0x00007f4e08e52c39 in piglit_gl_test_run (argc=3, argv=0x7fffde9e0cb8, config=0x7fffde9e0b80) at piglit/tests/util/piglit-framework-gl.c:151
#29 0x0000000000402b3d in main (argc=3, argv=0x7fffde9e0cb8) at piglit/tests/texturing/shaders/texelFetch.c:102
(gdb) frame 1
#1  0x00007f4e039c1596 in tgsi_fetch_gs_outputs (shader=0x208e7d0, num_primitives=1, p_output=0x208f030) at draw/draw_gs.c:113
113	            debug_assert(!util_is_inf_or_nan(output[slot][0]));
(gdb) print slot
$1 = 1
(gdb) print output[slot]
$2 = {-nan(0x7fffff), 0, 0, 0}
Comment 1 Roland Scheidegger 2014-08-29 23:19:54 UTC
Fixed by 26a5156de7e11f21a8690cf159b643e45b4f90a8


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.